--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -18,13 +18,13 @@ email: auliadewi936@gmail.com # your email address
 # hal_id: # your HAL id (https://hal.science/)
 # ieee_id: # your ieeexplore.ieee.org/author/id
 #inspirehep_id: # Inspire HEP author ID
- instagram_id: https://www.instagram.com/tikaaa_aulia03?igsh=MWl4cjQ3d2U1MzdweA== # your instagram id
+instagram_id: @tikaaa_aulia03 # your instagram id
 # kaggle_id: # your kaggle id
 # keybase_username: # your keybase user name
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
- linkedin_username: Aulia Kartika Dewi # your LinkedIn user name
+linkedin_username: @Aulia_Kartika_Dewi # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
 # orcid_id: # your ORCID ID
@@ -48,9 +48,6 @@ email: auliadewi936@gmail.com # your email address
 # wikipedia_id: # your wikipedia id (Case sensitive)
 # work_url: # work page URL
 # x_username: # your X handle
- youtube_id: youtube.com/auliakartika.dwi # your youtube channel id (youtube.com/@<youtube_id>)
+youtube_id: youtube.com/@auliakartikadwi # your youtube channel id (youtube.com/@<youtube_id>)
 # zotero_username: # your zotero username
-#custom_social: # can be any name here other than the ones already defined above
-#  logo: https://www.alberteinstein.com/wp-content/uploads/2024/03/cropped-favicon-192x192.png # can be png, svg, jpg
- # title: Custom Social
- # url: https://www.alberteinstein.com/
+
